--- a/tailwind.css
+++ b/tailwind.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url(backdrop.jpg);
+  background-image: url(images/backdrop.jpg);
   background-size: contain;
   backdrop-filter: blur(2px);
   color: white;
@@ -18,7 +18,8 @@ form {
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
 }
-#spin:hover {
+#spin:hover,
+#spin1:hover {
   background: #08411b;
   color: #fff;
   border-radius: 5px;
